# nserver

./: .gitignore  DESIGN_NOTES.md  LICENCE  MANIFEST.in  NOTICE  README.md  bpython.ini  dev.sh  docker-compose.yml  mkdocs.yml  mypy.ini  pylintrc  pyproject.toml  setup.py  tox.ini  versions.json
.github/workflows/: test-suite.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0.dev1/reference/nserver/rules/: index.html
1.0.0.dev1/search/: search_index.json
1.0.0/external-resources/: index.html
1.0.0/production-deployment/: index.html
1.0.0/quickstart/: index.html
1.0.0/reference/nserver/: index.html
1.0.0/reference/nserver/exceptions/: index.html
1.0.0/reference/nserver/models/: index.html
1.0.0/reference/nserver/records/: index.html
1.0.0/reference/nserver/rules/: index.html
1.0.0/reference/nserver/server/: index.html
1.0.0/reference/nserver/settings/: index.html
1.0.0/reference/nserver/transport/: index.html
1.0.0/reference/nserver/util/: index.html
1.0.0/search/: search_index.json
1.0.1/reference/: SUMMARY.txt
1.0.2/: 404.html  index.html  objects.inv
1.0.2/quickstart/: index.html
1.0.2/reference/nserver/: index.html
1.0.2/reference/nserver/models/: index.html
1.0.2/reference/nserver/settings/: index.html
1.0.2/search/: search_index.json
2.0.0/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0/blueprints/: index.html
2.0.0/changelog/: index.html
2.0.0/error-handling/: index.html
2.0.0/external-resources/: index.html
2.0.0/middleware/: index.html
2.0.0/production-deployment/: index.html
2.0.0/quickstart/: index.html
2.0.0/reference/: SUMMARY.txt
2.0.0/reference/nserver/: index.html
2.0.0/reference/nserver/exceptions/: index.html
2.0.0/reference/nserver/middleware/: index.html
2.0.0/reference/nserver/models/: index.html
2.0.0/reference/nserver/records/: index.html
2.0.0/reference/nserver/rules/: index.html
2.0.0/reference/nserver/server/: index.html
2.0.0/reference/nserver/settings/: index.html
2.0.0/reference/nserver/transport/: index.html
2.0.0/reference/nserver/util/: index.html
2.0.0/search/: search_index.json
3.0.0/: objects.inv  sitemap.xml
3.0.0/changelog/: index.html
3.0.0/external-resources/: index.html
3.0.0/middleware/: index.html
3.0.0/reference/nserver/transport/: index.html
3.0.0/search/: search_index.json
3.0.1/: sitemap.xml
3.0.1/changelog/: index.html
3.0.1/search/: search_index.json
3.0.2/: sitemap.xml
3.0.2/architecture/: index.html
3.0.2/changelog/: index.html
3.0.2/quickstart/: index.html
3.0.2/reference/nserver/exceptions/: index.html
3.0.2/reference/nserver/middleware/: index.html
3.0.2/search/: search_index.json
3.0.2/security/: index.html
3.1.0/: 404.html  objects.inv  sitemap.xml
3.1.0/changelog/: index.html
3.1.0/error-handling/: index.html
3.1.0/production-deployment/: index.html
3.1.0/quickstart/: index.html
3.1.0/reference/: SUMMARY.txt
3.1.0/reference/nserver/application/: index.html
3.1.0/reference/nserver/models/: index.html
3.1.0/reference/nserver/server/: index.html
3.1.0/reference/nserver/transport/: index.html
3.1.0/reference/nserver/util/: index.html
3.1.0/search/: search_index.json
3.2.0/: index.html  objects.inv  sitemap.xml
3.2.0/changelog/: index.html
3.2.0/reference/nserver/cli/: index.html
3.2.0/reference/nserver/records/: index.html
3.2.0/reference/nserver/server/: index.html
3.2.0/search/: search_index.json
3.2.0/subserver-blueprint/: index.html
benchmark/: README.md  corefile-multi  corefile-single  simple_server.py  sleepy_server.py
dev/: sitemap.xml
dev/changelog/: index.html
dev/contributing/: index.html
dev/production-deployment/: index.html
dev/reference/nserver/: index.html
dev/reference/nserver/application/: index.html
dev/reference/nserver/middleware/: index.html
dev/reference/nserver/rules/: index.html
dev/reference/nserver/transport/: index.html
dev/search/: search_index.json
dev/security/: index.html
docs/: architecture.md  blueprints.md  changelog.md  contributing.md  error-handling.md  external-resources.md  index.md  middleware.md  production-deployment.md  quickstart.md  security.md  subserver-blueprint.md
latest/: 404.html  index.html
latest/external-resources/: index.html
latest/production-deployment/: index.html
latest/quickstart/: index.html
latest/reference/nserver/: index.html
latest/reference/nserver/exceptions/: index.html
latest/reference/nserver/models/: index.html
latest/reference/nserver/records/: index.html
latest/reference/nserver/rules/: index.html
latest/reference/nserver/server/: index.html
latest/reference/nserver/settings/: index.html
latest/reference/nserver/transport/: index.html
lib/docs/: common.Dockerfile
lib/python/: build.Dockerfile  build.sh  common.Dockerfile  install_pypy.sh  tox.Dockerfile
lib/python/format/: black.Dockerfile
lib/python/lint/: black.Dockerfile  mypy.Dockerfile  pylint.Dockerfile
lib/python/repl/: repl.Dockerfile
lib/python/test/: pytest.Dockerfile  tox.Dockerfile
src/nserver/: __init__.py  __main__.py  _version.py  application.py  cli.py  exceptions.py  middleware.py  models.py  records.py  rules.py  server.py  settings.py  transport.py  util.py
src/python_template/: _version.py
test_servers/: parkit.py  readme.py
tests/: test_blueprint.py  test_rules.py  test_server.py  test_subserver.py  test_util.py
v1.0.2/: sitemap.xml
v1.0.2/external-resources/: index.html
v1.0.2/production-deployment/: index.html
(+3 files in other folders)
