[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nserver"
version = "1.1.0.dev1"
description = "DNS Name Server Framework"
authors  = [
    {name = "Nicholas Hairs", email = "info+nserver@nicholashairs.com"},
]

# Dependency Information
requires-python = ">=3.7"
dependencies = [
    "dnslib",
    "tldextract",
]

# Extra information
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
]

[project.urls]
homepage = "https://nhairs.github.io/nserver/latest/"
github = "https://github.com/nhairs/nserver"

[project.optional-dependencies]
build = [
    "setuptools",
    "wheel",
]

dev = [
    ### dev.sh dependencies
    ## Formatting / Linting
    "validate-pyproject[all]",
    "black",
    "pylint",
    "mypy",
    ## Testing
    "pytest",
    ## REPL
    "bpython",
]

docs = [
    "black",
    "mkdocs",
    "mkdocs-material>=8.5",
    "mkdocs-awesome-pages-plugin",
    "mdx_truly_sane_lists",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mike",
]

[tool.setuptools.package-data]
nserver = ["py.typed"]
