[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nserver"
version = "3.0.1"
description = "DNS Name Server Framework"
authors  = [
    {name = "Nicholas Hairs", email = "info+nserver@nicholashairs.com"},
]

# Dependency Information
requires-python = ">=3.8"
dependencies = [
    "dnslib",
    "pillar~=0.3",
    "tldextract",
    "typing-extensions;python_version<'3.10'",
]

# Extra information
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
]

[project.urls]
HomePage = "https://nhairs.github.io/nserver"
GitHub = "https://github.com/nhairs/nserver"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    ## Formatting / Linting
    "validate-pyproject[all]",
    "black",
    "pylint",
    "mypy",
    ## Testing
    "pytest",
    ## Build
    "setuptools",
    "wheel",
    ## Docs
    "black",
    "mkdocs",
    "mkdocs-material>=8.5",
    "mkdocs-awesome-pages-plugin",
    "mdx_truly_sane_lists",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mike",
]

[project.scripts]
nserver = "nserver.__main__:main"

[tool.setuptools.package-data]
nserver = ["py.typed"]

[tool.black]
line-length = 100
